[project]
name = "hat-drivers"
version = "0.8.4"
description = "Hat communication drivers"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "aiohttp ~=3.9.5",
    "hat-aio ~=0.7.10",
    "hat-asn1 ~=0.6.7",
    "hat-json ~=0.5.27",
    "hat-sbs ~=0.7.1",
    "hat-util ~=0.6.16",
    "pyserial ~=3.5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]

[project.scripts]
hat-snmp-manager = "hat.drivers.snmp.manager.cli:main"

[project.urls]
Homepage = "http://hat-open.com"
Repository = "https://github.com/hat-open/hat-drivers.git"
Documentation = "http://hat-drivers.hat-open.com"

[project.optional-dependencies]
dev = [
    "hat-doit ~=0.15.15",
    "peru >=1.3.1",
]

[build-system]
requires = ["hat-doit ~=0.15.15"]
build-backend = "hat.doit.pep517"

[tool.pytest.ini_options]
testpaths = ["test_pytest"]
asyncio_mode = "auto"
timeout = 300

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
include = ["src_py/*"]
data_file = "build/.coverage"
